Fixing spacing in restaurant pages
OpenClassrooms Project 3 : "Dynamisez une page web avec des animations CSS"

--- a/styles/pages/_restaurant.scss
+++ b/styles/pages/_restaurant.scss
@@ -35,6 +35,7 @@ header.restaurant-header {
 
 form.menu-select {
   @include display;
+  padding-top: 10px;
 
   h2 {
     font-size: 18px;
